feat: add deleteProject to the api client (#64)
